<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/sciperNumber"
        android:text="How do you want to find your tutor?"
        android:textSize="20dp"
        android:paddingTop="8dp"
        android:textAlignment="center" />

    <Button
        android:text="By subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/bySubject" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:id="@+id/subjectLayout"
        android:visibility="gone">

    <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxWidth="42dp"
            android:maxHeight="42dp"
            android:scaleType="fitCenter"
            android:background="@null"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/school"
            android:id="@+id/mathsButton" />
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxWidth="42dp"
            android:maxHeight="42dp"
            android:scaleType="fitCenter"
            android:background="@null"
            app:srcCompat="@drawable/molecule"
            android:id="@+id/physicsButton" />
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxWidth="42dp"
            android:maxHeight="42dp"
            android:scaleType="fitCenter"
            android:background="@null"
            app:srcCompat="@drawable/flask"
            android:id="@+id/chemistryButton" />
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxWidth="42dp"
            android:maxHeight="42dp"
            android:scaleType="fitCenter"
            android:background="@null"
            app:srcCompat="@drawable/computer"
            android:id="@+id/computerButton" />
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxWidth="42dp"
            android:maxHeight="42dp"
            android:scaleType="fitCenter"
            android:background="@null"
            app:srcCompat="@drawable/shapes"
            android:id="@+id/mechanicsButton" />
    </LinearLayout>


    <Button
        android:text="By name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/byName" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/nameLayout">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameToSearch"
            android:hint="Insert name"
            android:textSize="20dp"
            android:layout_weight="4" />

        <Button
            android:text="search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:id="@+id/searchByName" />
    </LinearLayout>
    <Button
        android:text="By sciper number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/bySciper" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/sciperLayout">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sciperToSearch"
            android:hint="Insert sciper number"
            android:textSize="20dp"
            android:layout_weight="4" />

        <Button
            android:text="search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:id="@+id/searchBySciper" />
    </LinearLayout>
    <Button
        android:text="Show full list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/showFullList" />
</LinearLayout>