package ch.epfl.sweng.tutosaurus;

import android.support.test.InstrumentationRegistry;
import android.support.test.espresso.Espresso;
import android.support.test.espresso.contrib.NavigationViewActions;
import android.test.ActivityInstrumentationTestCase2;

import ch.epfl.sweng.tutosaurus.actions.NestedScrollViewScrollToAction;

import static android.support.test.espresso.Espresso.onData;
import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.action.ViewActions.typeText;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.contrib.DrawerActions.open;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.anything;

/**
 * Created by albertochiappa on 14/10/16.
 */

public class PublicProfileTest extends ActivityInstrumentationTestCase2<MainActivity> {
    public PublicProfileTest() {
        super(MainActivity.class);
    }

    @Override
    public void setUp() throws Exception {
        super.setUp();
        injectInstrumentation(InstrumentationRegistry.getInstrumentation());
    }

    public void testCanSearchBySubject() throws InterruptedException{
        getActivity();
        //onView(withId(R.id.mainBypassLoginButton)).perform(click());
        onView(withId(R.id.main_email)).perform(typeText("albert.einstein@epfl.ch"));
        Espresso.closeSoftKeyboard();
        onView(withId(R.id.main_password)).perform(typeText("tototo"));
        Espresso.closeSoftKeyboard();
        onView(withText("Log in")).perform(click());
        Thread.sleep(8000);
        getActivity();
        onView(withId(R.id.drawer_layout)).perform(open());
        onView(withId(R.id.nav_view)).perform(NavigationViewActions.navigateTo(R.id.nav_findTutors_layout));
        Thread.sleep(1000);
        onView(withId(R.id.bySubject)).perform(click());
        Thread.sleep(1000);
        onData(anything()).inAdapterView(withId(R.id.courseList)).atPosition(0).perform(click());
        onData(anything()).inAdapterView(withId(R.id.tutorList)).atPosition(0).perform(click());
        onView(withId(R.id.profileName)).check(matches(isDisplayed()));
        Thread.sleep(1000);
        //onView(withId(R.id.commentsButton)).perform(NestedScrollViewScrollToAction.scrollTo(), click());
        //onView(withId(R.id.commentsView)).check(matches(isDisplayed()));
        //onView(withId(R.id.commentsButton)).perform(NestedScrollViewScrollToAction.scrollTo(), click());
        //onView(withId(R.id.commentsView)).check(matches(not(isDisplayed())));
        onView(withId(R.id.courseListLayout)).perform(NestedScrollViewScrollToAction.scrollTo(), click());
        //onView(withId(R.id.subjectName)).check(matches(withText("Mathematics")));
        //onView(withId(R.id.mathsButton)).perform(NestedScrollViewScrollToAction.scrollTo(), click());
        //onView(withId(R.id.subjectName)).check(matches(not(isDisplayed())));
        Espresso.pressBack();
        Espresso.pressBack();
        /*Thread.sleep(1000);
        onView(withId(R.id.physicsButton)).perform(click());
        onData(anything()).inAdapterView(withId(R.id.tutorList)).atPosition(0).perform(click());
        onView(withId(R.id.profileName)).check(matches(isDisplayed()));
        Thread.sleep(1000);
        onView(withId(R.id.commentsButton)).perform(NestedScrollViewScrollToAction.scrollTo(), click());
        onView(withId(R.id.commentsView)).check(matches(isDisplayed()));
        onView(withId(R.id.commentsButton)).perform(NestedScrollViewScrollToAction.scrollTo(), click());
        onView(withId(R.id.commentsView)).check(matches(not(isDisplayed())));
        onView(withId(R.id.physicsButton)).perform(NestedScrollViewScrollToAction.scrollTo(), click());
        onView(withId(R.id.subjectName)).check(matches(withText("Physics")));
        onView(withId(R.id.physicsButton)).perform(NestedScrollViewScrollToAction.scrollTo(), click());
        onView(withId(R.id.subjectName)).check(matches(not(isDisplayed())));
        Espresso.pressBack();
        Espresso.pressBack();
        Thread.sleep(1000);
        onView(withId(R.id.chemistryButton)).perform(click());
        onData(anything()).inAdapterView(withId(R.id.tutorList)).atPosition(0).perform(click());
        onView(withId(R.id.profileName)).check(matches(isDisplayed()));
        Thread.sleep(1000);
        onView(withId(R.id.commentsButton)).perform(NestedScrollViewScrollToAction.scrollTo(), click());
        onView(withId(R.id.commentsView)).check(matches(isDisplayed()));
        onView(withId(R.id.commentsButton)).perform(NestedScrollViewScrollToAction.scrollTo(), click());
        onView(withId(R.id.commentsView)).check(matches(not(isDisplayed())));
        onView(withId(R.id.chemistryButton)).perform(NestedScrollViewScrollToAction.scrollTo(), click());
        onView(withId(R.id.subjectName)).check(matches(withText("Chemistry")));
        onView(withId(R.id.chemistryButton)).perform(NestedScrollViewScrollToAction.scrollTo(), click());
        onView(withId(R.id.subjectName)).check(matches(not(isDisplayed())));
        Espresso.pressBack();
        Espresso.pressBack();
        Thread.sleep(1000);
        onView(withId(R.id.computerButton)).perform(click());
        onData(anything()).inAdapterView(withId(R.id.tutorList)).atPosition(0).perform(click());
        onView(withId(R.id.profileName)).check(matches(isDisplayed()));
        Thread.sleep(1000);
        onView(withId(R.id.commentsButton)).perform(NestedScrollViewScrollToAction.scrollTo(), click());
        onView(withId(R.id.commentsView)).check(matches(isDisplayed()));
        onView(withId(R.id.commentsButton)).perform(NestedScrollViewScrollToAction.scrollTo(), click());
        onView(withId(R.id.commentsView)).check(matches(not(isDisplayed())));
        onView(withId(R.id.computerButton)).perform(NestedScrollViewScrollToAction.scrollTo(), click());
        onView(withId(R.id.subjectName)).check(matches(withText("Computer Science")));
        onView(withId(R.id.computerButton)).perform(NestedScrollViewScrollToAction.scrollTo(), click());
        onView(withId(R.id.subjectName)).check(matches(not(isDisplayed())));
        Espresso.pressBack();
        Espresso.pressBack();
        Thread.sleep(1000);
        onView(withId(R.id.bySubject)).perform(click());
        onView(withId(R.id.showFullList)).perform(click());
        onData(anything()).inAdapterView(withId(R.id.tutorList)).atPosition(0).perform(click());
        onView(withId(R.id.profileName)).check(matches(isDisplayed()));
        Thread.sleep(1000);
        onView(withId(R.id.commentsButton)).perform(NestedScrollViewScrollToAction.scrollTo(), click());
        onView(withId(R.id.commentsView)).check(matches(isDisplayed()));
        onView(withId(R.id.commentsButton)).perform(NestedScrollViewScrollToAction.scrollTo(), click());
        onView(withId(R.id.commentsView)).check(matches(not(isDisplayed())));
        Espresso.pressBack();
        Espresso.pressBack();
        Thread.sleep(1000);
        onView(withId(R.id.byName)).perform(click());
        onView(withId(R.id.nameToSearch)).perform(typeText("Albert Einstein"));
        onView(withId(R.id.searchByName)).perform(click());
        onData(anything()).inAdapterView(withId(R.id.tutorList)).atPosition(0).perform(click());
        onView(withId(R.id.profileName)).check(matches(withText("Albert Einstein")));
*/
    }

}
